--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
 
 /* three font styles in use: lora, lustria, permanent marker */
 
-/* GLOBAL STYLE SETTINGS */
+/* GENERAL STYLE SETTINGS */
 * {
     padding: 0;
     margin: 0;
@@ -44,4 +44,40 @@ p {
     font-weight: bold;
     color: #721200;
     font-size: 1.5rem;
+}
+
+/* HOME PAGE CONFIG */
+
+/* homepage buttons */
+.homepage-buttons-container{
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.homepage-buttons {
+    background-color: #721200;
+    border-radius: 10%;
+    width: 150px;
+    cursor: pointer;
+    color: #ffffff;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    box-shadow: 2px 1px 2px gray;
+    margin: 4px 10px 4px 10px;
+}
+
+.homepage-buttons:hover {
+    background-color: #fff;
+    color: #721200;
+    font-weight: bold;
+}
+
+.homepage-buttons:active {
+    box-shadow: 0 0 0 white;
+    margin: 6px 10px 2px 10px;
 }
