--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,9 +46,9 @@ p {
     font-size: 1.5rem;
 }
 
-/* HOME PAGE CONFIG */
+/* INDEX PAGE CONFIG */
 
-/* homepage buttons */
+/* index page buttons */
 .homepage-buttons-container{
     height: 80px;
     display: flex;
@@ -80,4 +80,82 @@ p {
 .homepage-buttons:active {
     box-shadow: 0 0 0 white;
     margin: 6px 10px 2px 10px;
+}
+
+/* homepage - rules section */
+
+#homepage-rules {
+    margin: 50px 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: top;
+    width: 90%;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+#homepage-rules-left, #homepage-rules-right {
+    width: 100%;
+    margin: 0 20px;
+}
+
+#skyblue {
+    background-color: skyblue;
+    font-weight: bold;
+    color: black;
+}
+
+#green {
+    background-color: green;
+    color: white;
+}
+
+
+#homepage-rules-right i {
+    color: #721200;
+}
+
+#homepage-rules li {
+    text-align: center;
+    list-style-type: none;
+    font-size: 1rem;
+}
+
+#homepage-rules li:hover {
+    color: red;
+}
+
+
+#homepage-rules li, #tutorial {
+    font-family: 'lustria',sans-serif;
+    font-weight: bold;
+    padding: 8px;
+    color: black;
+}
+
+#tutorial {
+    font-family: 'lustria',sans-serif;
+    font-weight: bold;
+    padding: 8px;
+    color: red;
+    text-decoration: underline;
+}
+
+#tutorial:hover {
+    color: green;
+    text-decoration: underline;
+}
+
+/* how to play guide image */
+#guide-image-container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 65%;
+    border: 6px solid black;
+}
+
+#guide-image {
+    width: 100%;
+    height: 100%;
 }
