--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-image: url('../images/site/background.jpg');
+    background-image: url('../images/site/background.webp');
     background-size: cover;
 }
 
@@ -110,7 +110,6 @@ p {
     color: white;
 }
 
-
 #homepage-rules-right i {
     color: #721200;
 }
@@ -124,7 +123,6 @@ p {
 #homepage-rules li:hover {
     color: red;
 }
-
 
 #homepage-rules li, #tutorial {
     font-family: 'lustria',sans-serif;
@@ -159,3 +157,19 @@ p {
     width: 100%;
     height: 100%;
 }
+
+/* FOOTER */
+
+footer {
+    margin-top: 100px;
+    background-color: black;
+    width: 100%;
+    color: white;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    position: fixed;
+    bottom: 0;
+}
+
