--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,3 +173,33 @@ footer {
     bottom: 0;
 }
 
+/* GAME PAGE CONFIG */
+
+/*how to play and music play/pause button config*/
+
+#how-to-play-container {
+    height: 150px;
+    margin: 50px 0 ;
+}
+
+.how-to-play {
+    margin-bottom: 100px;
+    padding: 8px 20px;
+    background-color: #721200;
+    color: #fff;
+    font-family: 'lustria', sans-serif;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+    width: 200px;
+    box-shadow: 2px 1px 2px gray;
+    margin: 4px 10px 4px 10px;
+    border: 2px solid black;
+    letter-spacing: 1.5px;
+    display: inline-block;
+}
+
+.how-to-play:active  {
+    box-shadow: 0 0 0 white;
+    margin: 6px 10px 2px 10px;
+}
