--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,3 +250,61 @@ footer {
     justify-content: center;
     margin-bottom: 150px ;
 }
+
+/* button layout around outside of board */
+
+.gamepage-buttons, .digit-btn {
+    padding: 8px 10px;
+    background-color: #721200;
+    color: #fff;
+    font-family: 'lustria', sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+    width: 150px;
+    box-shadow: 2px 1px 2px gray;
+    margin: 4px 10px 4px 10px;
+    letter-spacing: 1.5px;
+}
+
+.gamepage-buttons:active, .digit-btn:active {
+    box-shadow: 0 0 0 white;
+    margin: 6px 10px 2px 10px;
+}
+
+#container-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: -60px;
+}
+
+#container-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 500px;
+}
+
+#container-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    max-height: 480px;
+    margin-right: 35px;
+}
+
+#container-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-height: 480px;
+    margin-left: 35px;
+}
+
+#digits {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
