--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -235,12 +235,6 @@ footer {
     user-select: none;
 }
 
-.tile > span:nth-child(1) {
-    font-size: x-large;
-    font-weight: bold;
-    color: black;
-}
-
 #box2, #box4, #box6, #box8 {
     background-color: #bdb29f;
 }
@@ -307,4 +301,71 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+/* position of values inside tiles */
+
+/* main digit position */
+.tile > span:nth-child(1) {
+    font-size: x-large;
+    font-weight: bold;
+    color: black;
+}
+
+.tile {
+    position: relative;
+}
+
+/* notes mode digit position*/
+#notes.active {
+    background-color: skyblue;
+}
+
+.note {
+    position: absolute;
+    font-size: 12px;
+}
+
+.note.n1 {
+    left: 2px;
+    top: 0;
+}
+
+.note.n2 {
+    top: 0;
+    transform: translateX(-50%);
+}
+
+.note.n3 {
+    top: 0;
+    right: 2px;
+}
+
+.note.n4 {
+    left: 2px;
+    transform: translateY(-50%);
+}
+
+.note.n5 {
+    transform: translate(-50%, -50%)
+}
+
+.note.n6 {
+    right: 2px;
+    transform: translateY(-50%);
+}
+
+.note.n7 {
+    bottom: 0;
+    left: 2px;
+}
+
+.note.n8 {
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+.note.n9 {
+    bottom: 0;
+    right: 2px;
 }
