--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -369,3 +369,41 @@ footer {
     bottom: 0;
     right: 2px;
 }
+
+/* MEDIA QUERY @ 1100PX WIDTH */
+
+@media screen and (max-width:1100px) {
+    #homepage-rules {
+        flex-direction: column;
+        align-items: center;
+    }
+
+#guide-image-container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    border: 6px solid black;
+    }
+
+#guide-image {
+    width: 100%;
+    height: 100%;
+    }
+}
+
+/* MEDIA QUERY @  900PX WIDTH */
+
+@media screen and (max-width:900px) {
+    #container-left {
+        margin-right: 5px;
+    }
+    
+    #container-right {
+        margin-left: 5px;
+    }
+
+    .digit-btn {
+        width: 60px;
+    }
+}
