--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -303,6 +303,10 @@ footer {
     justify-content: center;
 }
 
+.selected{
+    background:green;
+}
+
 /* position of values inside tiles */
 
 /* main digit position */
