change background color of footer to improve contrast level. Add link to footer to github page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,15 +162,21 @@ p {
 
 footer {
     margin-top: 100px;
-    background-color: black;
+    background-color: white;
     width: 100%;
-    color: white;
     height: 40px;
     display: flex;
     align-items: center;
     justify-content: center; 
     position: fixed;
     bottom: 0;
+}
+
+#footer-text {
+    font-family: 'lustria', sans-serif;
+    color: #721200;
+    font-size: 1rem;
+    text-decoration: none;
 }
 
 /* GAME PAGE CONFIG */
